@@ -159,6 +159,8 @@ Version CVS HEAD (?)
       was not set or was set to zero
     - lfoN_freq_onccX wasn't working when lfoN_freq
       was not set or was set to zero
+    - implemented opcodes resonance_onccN, resonance_smoothccN,
+      resonance_curveccN, cutoff_smoothccN, cutoff_curveccN
 
   * SoundFont format engine:
     - Initial implementation (not usable yet)
